--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{padding:0px;margin:0px;box-decoration-break:slice;}
 body{background-color:lightgray;}
 #header-div{width:98%;background-color:white;padding:1%;border-radius:5px;box-shadow:0 0 10px #223345;}
-#search-item{width:40%;padding:1.25%;text-align:left;box-shadow:0 0 10px #223345;font-size:18pt;border-radius:10px;border:0.5px solid #223345;font-family:calibri;}
-#search-button{width:16%;margin-left:0.5%;font-size:18pt;text-align:center;box-shadow:0 0 10px #223345;padding:1.25%;cursor:pointer;background-color:white;border:0.5px solid #223345;border-radius:10px;font-family:calibri;}
-#translator{width:16%;margin-left:0.5%;font-size:18pt;text-align:center;box-shadow:0 0 10px #223345;padding:1.25%;cursor:pointer;background-color:white;border:0.5px solid #223345;border-radius:10px;font-family:calibri;}
+#search-item{padding:1%;width:30%;margin:2% 2% 0;font-size:18pt;border:none;box-shadow:0 0 1px #223345;}
+#search-button{width:10%;font-size:16.5pt;padding:1%;background-color:rgba(0,0,0,0);border:none;box-shadow:0 0 1px #223345;margin-left;20%;cursor:pointer;color:#223345;margin-left:-1.5%;}
+#translator{width:20%;font-size:16.5pt;padding:1%;background-color:rgba(0,0,0,0);border:none;box-shadow:0 0 1px #223345;margin-left;20%;cursor:pointer;color:#223345;margin-left:1%;}
 .translatorV{width:16%;margin-left:0.5%;font-size:18pt;text-align:center;padding:1.25%;cursor:pointer;background-color:white;border:0.5px solid #223345;border-radius:10px;font-family:calibri;}
 .translatorC{width:16%;margin-left:0.5%;font-size:18pt;text-align:center;padding:1.25%;cursor:pointer;background-color:#223345;color:#223345;border:0.5px solid #223345;border-radius:10px;font-family:calibri;}
 #search-button:hover{background-color:rgba(255,0,0,0.5);color:white;border:2px solid white;transition:background-color 700ms,color 300ms,border 700ms;}
