--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{padding:0px;margin:0px;box-decoration-break:slice;}
 
 #d-alpha-div{position:relative;display:inline-block;box-shadow:0 0 10px #223345;margin-top:1%;width:10%;background-color:white;border-radius:5px;margin-left:1%;}
 #d-alpha-parentList{list-style:none;margin-left:10%;}
-#d-alpha-div li{width:90%;margin-left:-33%;overflow:auto;overflow-y:scroll;border:1px solid #223345;box-shadow:0 0 5px #223345;margin-top:7.5%;padding:5%;text-align:center;font-family:calibri;cursor:pointer;border-radius:7.5px;}
+#d-alpha-div li{width:90%;margin-left:-33%;border:1px solid #223345;box-shadow:0 0 5px #223345;margin-top:7.5%;padding:5%;text-align:center;font-family:calibri;cursor:pointer;border-radius:7.5px;}
 #d-alpha-div li:hover{background-color:rgba(255,0,0,0.75);color:white;transition:background-color 700ms,color 700ms;}
 
 #d-content-div{position:absolute;display:none;box-shadow:0 0 10px #223345;width:87%;background-color: white;margin-top:1%;margin-left:1%;border-radius:5px;}
@@ -19,7 +19,7 @@ body{padding:0px;margin:0px;box-decoration-break:slice;}
 #d-content-div li{border-top:1px solid #223355;color:#223345;font-family:calibri;font-size:24pt;margin-top:2%;margin-left:8%;width:70%;text-indent:2%;}
 #d-content-div article{font-size:15pt;margin-left:21%;}
 
-#d-feed-div{position:absolute;display:inline-block;width:87%;height:600px;overflow:auto;overflow-y:scroll;box-shadow:0 0 10px #223345;height:142.5%;margin:1%;background-color:white;border-radius:5px;}
+#d-feed-div{position:absolute;display:inline-block;width:87%;height:100%;overflow:auto;overflow-y:scroll;box-shadow:0 0 10px #223345;height:142.5%;margin:1%;background-color:white;border-radius:5px;}
 #d-feed-div h2{font-family:calibri;width:93.5%;text-shadow:1px 1px #223345;margin-left:2.5%;padding:1%;font-size:25pt;color:rgba(255,0,0,0.7);border-top:2px solid #223345;border-bottom:2px solid #223345;text-indent: 2.5%;}
 #d-feed-div article{width:80%;margin-left:10%;text-indent:7.5%;font-family:calibri;font-size:16pt;padding-top:0.3%;}
 #d-feed-div ul{list-style:square;width:45%;margin-left:33%;}
